--- a/breathe.css
+++ b/breathe.css
@@ -23,8 +23,8 @@ body {
     width: 100%;
     height: 100%;
     position: absolute;
-    top: 45%;
-    font-size: 5.5em;
+    top: 35%;
+    font-size: 4em;
     font-family: sans-serif;
     color: green;
     font-weight: 700;
@@ -47,7 +47,7 @@ div .xlarge {
     height: 900px;
     background: #93f39e;
     opacity: 0.3;
-    margin-top: -2%;
+    margin-top: -15%;
     left: 12.5%;
     z-index: 1;
 }
@@ -56,7 +56,7 @@ div .xlarge {
     width: 100%;
     height: 1200px;
     background: #52ec71;
-    margin: -180px 0 auto 0;
+    margin: -200px 0 auto 0;
     opacity: 0.2;
 }
 
@@ -116,7 +116,7 @@ nav {
 
 nav .logo {
     margin-top: 10px;
-    margin-left: 25px;
+    margin-left: 15px;
     cursor: pointer;
 }
 
@@ -125,7 +125,7 @@ nav .timer {
     text-decoration: none;
     font-size: 3.2rem;
     color: #59BD86;
-    margin-right: 25px;
+    margin-right: 15px;
     cursor: pointer;
     pointer-events: inherit;
 }
@@ -228,11 +228,15 @@ nav .timer {
 .btn-grp {
     display: flex;
     flex-direction: column;
-    width: 40%;
+    width: 60%;
     margin: 20px auto 20px;
     height: 250px;
     justify-content: space-evenly;
     text-align: center;
+}
+
+.ModalHeading {
+    font-size: 1.5rem;
 }
 
 .btn-grp button {
