--- a/breathe.css
+++ b/breathe.css
@@ -23,7 +23,7 @@ body {
     width: 100%;
     height: 100%;
     position: absolute;
-    top: 35%;
+    top: 37%;
     font-size: 4em;
     font-family: sans-serif;
     color: green;
@@ -37,7 +37,7 @@ body {
     height: 315px;
     left: 31.5%;
     background: #02ff20e1;
-    top: 32%;
+    top: 33%;
     opacity: 1;
 }
 
@@ -45,19 +45,20 @@ div .xlarge {
     position: absolute;
     width: 75%;
     height: 900px;
-    background: #93f39e;
-    opacity: 0.3;
-    margin-top: -15%;
+    opacity: 1;
+    background: #52ec71;
+    margin-top: 35%;
     left: 12.5%;
     z-index: 1;
 }
 
 .xxlarge {
+    background: #93f39e;
+    position: relative;
     width: 100%;
     height: 1200px;
-    background: #52ec71;
-    margin: -200px 0 auto 0;
-    opacity: 0.2;
+    margin: -180px 0 auto 0;
+    opacity: 0.35;
 }
 
 .rules {
@@ -111,12 +112,13 @@ nav {
     justify-content: space-between;
     padding: 8px;
     z-index: 1111;
+    margin-top: 180px;
     background-color: transparent;
 }
 
 nav .logo {
     margin-top: 10px;
-    margin-left: 15px;
+    margin-left: 25px;
     cursor: pointer;
 }
 
@@ -125,7 +127,7 @@ nav .timer {
     text-decoration: none;
     font-size: 3.2rem;
     color: #59BD86;
-    margin-right: 15px;
+    margin-right: 25px;
     cursor: pointer;
     pointer-events: inherit;
 }
@@ -235,10 +237,6 @@ nav .timer {
     text-align: center;
 }
 
-.ModalHeading {
-    font-size: 1.5rem;
-}
-
 .btn-grp button {
     padding: 12px 20px;
     border: none;
@@ -270,7 +268,7 @@ nav .timer {
     position: absolute;
     left: 8%;
     /* bottom: 20px; */
-    top: 80vh;
+    top: 100vh;
     font-size: 1rem;
     font-family: sans-serif;
     color: #086e20;
@@ -283,46 +281,88 @@ nav .timer {
     letter-spacing: 2px;
 }
 
-@media (min-width:992px) {
-    nav .timer {
-        margin-right: 120px;
+@media (min-width:412px) {
+    nav {
+        margin-top: 100px
     }
-    .tooltip .tooltiptext {
-        left: 6%;
+    .large {
+        height: 262.5px;
     }
-    .tooltip .tooltiptext::after {
-        left: 50%;
+    div .xlarge {
+        height: 750px;
+        margin-top: 20%;
     }
-    .modal-content {
-        height: auto;
-    }
-    .main-content {
-        display: flex;
-        flex-direction: column;
-    }
-    nav .logo {
-        margin-left: 90px;
-        margin-top: 15px;
-        cursor: pointer;
-    }
-    nav .timer {
-        cursor: pointer;
-    }
-    .main-content div,
-    .main-content h1 {
-        margin-bottom: 40px;
-    }
-    .btn-grp {
-        flex-direction: row;
-        align-items: center;
-        height: auto;
-        justify-content: space-between;
-    }
-    .btn-grp button {
-        width: 32%;
-        font-size: 1.3rem;
+    .xxlarge {
+        height: 1000px;
+        margin-top: -100px;
     }
     .points {
-        left: 4.2%;
+        top: 95vh
+    }
+}
+
+@media (min-width:600px) and (max-width:790px) {
+    div .xlarge {
+        height: 750px;
+        margin-top: 16%;
+    }
+}
+
+@media (min-width:791px) and (max-width:853px) {
+    div .xlarge {
+        height: 750px;
+        margin-top: 13%;
+    }
+}
+
+@media (min-width:854px) and (max-width:900px) {
+    div .xlarge {
+        height: 750px;
+        margin-top: 12%;
+    }
+}
+
+@media (min-width:901px) and (max-width:992px) {
+    div .xlarge {
+        height: 750px;
+        margin-top: 10%;
+    }
+}
+
+@media (min-width:993px) and (max-width:1152px) {
+    div .xlarge {
+        height: 750px;
+        margin-top: 10%;
+    }
+}
+
+@media (min-width:1153px) and (max-width:1272px) {
+    div .xlarge {
+        height: 750px;
+        margin-top: 8%;
+    }
+}
+
+@media (min-width:1273px)and (max-width:1310px) {
+    div .xlarge {
+        height: 750px;
+        margin-top: 8%;
+    }
+}
+
+@media (min-width:1311px) {
+    div .xlarge {
+        height: 750px;
+        margin-top: 7.5%;
+    }
+}
+
+@media (min-width:1511px) {
+    div .xlarge {
+        height: 750px;
+        margin-top: 6.5%;
+    }
+    .btn-grp {
+        width: 30%;
     }
 }
